--- a/public/css/invoice.css
+++ b/public/css/invoice.css
@@ -86,6 +86,25 @@ a {
   margin-right: 5%;
 }
 
+.invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .watermark {
+  position: fixed;
+  z-index: 99;
+  color: grey;
+  top: 40%;
+  left: 30%;
+  opacity: 0.2;
+  font-size: 70px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-header-wrap {
   position: relative;
   padding: 35px;
@@ -161,13 +180,17 @@ a {
 
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div {
   position: relative;
-  line-height: 1.1rem;
+  line-height: 1.2rem;
   color: black;
 }
 
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div span {
   font-weight: 500;
   margin-right: 10px;
+}
+
+.invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div .in-status {
+  color: #f82424;
 }
 
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap div:nth-child(1) {
