--- a/public/sass/invoice.scss
+++ b/public/sass/invoice.scss
@@ -50,6 +50,18 @@
                         margin-left: 5%;
                         margin-right: 5%;
 
+                        .watermark {
+                            position: fixed;
+                            z-index: 99;
+                            color: grey;
+                            top: 40%;
+                            left: 30%;
+                            opacity: 0.2;
+                            font-size: 70px;
+                            @include rotate(-45deg);
+                            user-select: none;
+                        }
+
                         .invoice-header-wrap {
                             position: relative;
                             padding: 35px;
@@ -115,12 +127,15 @@
 
                             div {
                                 position: relative;
-                                line-height: 1.1rem;
+                                line-height: 1.2rem;
                                 color: black;
 
                                 span {
                                     font-weight: 500;
                                     margin-right: 10px;
+                                }
+                                .in-status {
+                                    color: rgb(248, 36, 36);
                                 }
                             }
                             div:nth-child(1) {
